# bazel-vue-example

./: WORKSPACE
portal/: BUILD.bazel  package.json
